--- a/package.json
+++ b/package.json
@@ -54,7 +54,10 @@
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "@types/systemjs": "^6.1.0",
+    "json5": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -66,6 +69,7 @@
     "single-spa-react": "^4.1.0",
     "single-spa-vue": "^2.2.0",
     "vue": "^2.6.12",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "zone.js": "^0.11.5"
   }
 }
